--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Carter Haas - Home</title>
+    <link rel="stylesheet" href="Styles/styles.css">
+</head>
+<body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="summary.html">Summary</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="certifications.html">Certs</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div style="overflow: hidden;">
+            <div style="float: left; width: 70%;">
+                <h1>Carter Haas</h1>
+                <p>Abington, MA 02351<br>
+                <strong>Phone:</strong> 413-652-2977<br>
+                <strong>Email:</strong> <a href="mailto:CarterHaas23@gmail.com">CarterHaas23@gmail.com</a><br>
+                <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/carter-haas-391010193/">Profile</a><br>
+                <strong>Portfolio:</strong> <a href="https://carter-haas.github.io/">carter-haas.github.io</a><br>
+                <strong>Bold Profile:</strong> <a href="https://bold.pro/my/carter-haas/700r">bold.pro/my/carter-haas</a></p>
+            </div>
+            <div style="float: right; width: 25%; text-align: center;">
+                <img src="Imgs/profile.jpg" alt="Profile Picture" style="width:100%; max-width:200px; border-radius:100px;">
+            </div>
+        </div>
+    </div>
+</body>
+</html>
