--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
             <div style="float: left; width: 70%;">
                 <h1>Carter Haas</h1>
                 <p>Abington, MA 02351<br>
-                <strong>Phone:</strong> 413-652-2977<br>
+                <strong>Phone:</strong><br>
                 <strong>Email:</strong> <a href="mailto:CarterHaas23@gmail.com">CarterHaas23@gmail.com</a><br>
                 <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/carter-haas-391010193/">Profile</a><br>
                 <strong>Portfolio:</strong> <a href="https://carter-haas.github.io/">carter-haas.github.io</a><br>
-                <strong>Bold Profile:</strong> <a href="https://bold.pro/my/carter-haas/700r">bold.pro/my/carter-haas</a></p>
             </div>
             <div style="float: right; width: 25%; text-align: center;">
                 <img src="Imgs/profile.jpg" alt="Profile Picture" style="width:100%; max-width:200px; border-radius:100px;">
